--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio – Abel Belarre</title>
         <link rel="stylesheet" href="portfolio.css">
-        <link rel="stylesheet" href="/base.css">
+        <link rel="stylesheet" href="../base.css">
     </head>
 
     <body>
