--- a/about.html/about.html
+++ b/about.html/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About – Abel Belarre</title>
         <link rel="stylesheet" href="about.css">
-        <link rel="stylesheet" href="/base.css">
+        <link rel="stylesheet" href="../base.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
