Mirror all local updates

--- a/about.html/about.html
+++ b/about.html/about.html
@@ -4,9 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About – Abel Belarre</title>
+        <meta name="description" content="Conoce a Abel Belarre.">
+        <meta name="keywords" content="Abel Belarre, filmmaker, director, cine, Barcelona, cinematografía, audiovisual, portfolio">
+        <meta name="author" content="Abel Belarre">
+        <meta name="robots" content="index, follow">
         <link rel="stylesheet" href="about.css">
         <link rel="stylesheet" href="../base.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+
+    <!--favicon-->
+
+    <link rel="icon" type="image/png" href="../icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="../icon/favicon.svg" />
+    <link rel="shortcut icon" href="../icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-touch-icon.png" />
+    <link rel="manifest" href="../icon/site.webmanifest" />
+
+
     </head>
     <body>
 			<div class="language-switch">
@@ -24,7 +38,7 @@
     <!-- Contenido principal -->
     <section class="about-section">
         <div class="about-image">
-        <img src="images/joabout.jpg" alt="Abel Belarre filming on set">
+        <img src="images/joabout.webp" alt="Abel Belarre filming on set">
         </div>
 
         <div class="about-text">
@@ -69,6 +83,6 @@
         <a href="../index.html" data-i18n="BackButton">← Back to home</a>
     </footer>
 
-    <script src="/lang.js"></script>
+    <script src="../lang.js"></script>
 </body>
 </html>
