--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -4,8 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio – Abel Belarre</title>
+        <meta name="description" content="Portfolio cinematográfico de Abel Belarre: director y filmmaker con base en Barcelona. Descubre proyectos audiovisuales y contacto profesional.">
+        <meta name="keywords" content="Abel Belarre, filmmaker, director, cine, Barcelona, cinematografía, audiovisual, portfolio">
+        <meta name="author" content="Abel Belarre">
+        <meta name="robots" content="index, follow">
         <link rel="stylesheet" href="portfolio.css">
         <link rel="stylesheet" href="../base.css">
+
+            <!--favicon-->
+
+    <link rel="icon" type="image/png" href="../icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="../icon/favicon.svg" />
+    <link rel="shortcut icon" href="../icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-touch-icon.png" />
+    <link rel="manifest" href="../icon/site.webmanifest" />
+
+
     </head>
 
     <body>
@@ -27,74 +41,74 @@
         <section class="portfolio-grid">
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/Wo-q4otwZx0?si=FQDNgjzMBqbVP-EK">
-                <img src="images/marcel.jpg" alt="Preescriptus">
+                <img src="images/marcel.webp" alt="Preescriptus">
                 <div class="overlay"><span>Cuando - Marcel Álvarez</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/lbTX_aNrmDQ?si=1DTdf4vvA2V4Xp9G">
-                <img src="images/nova.jpg" alt="NovaRP">
+                <img src="images/nova.webp" alt="NovaRP">
                 <div class="overlay"><span>Teaser Nova RP</span></div>
             </div>
 
 
             <div class="portfolio-item" data-locked="true" data-video="">
-                <img src="images/eon.jpg" alt="Eon">
+                <img src="images/eon.webp" alt="Eon">
                 <div class="overlay"><span>EON</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/GfxQQRXsz2g?si=z7CqdOZfnyGlMl-j">
-                <img src="images/eonm.jpg" alt="La moralidad de viajar en el tiempo">
+                <img src="images/eonm.webp" alt="La moralidad de viajar en el tiempo">
                 <div class="overlay"><span>La moralidad de viajar en el tiempo</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/NpWMav1mHtc?si=hgDdTc7mEHfwY_4L">
-                <img src="images/oscars2025.jpg" alt="Oscars 2025">
+                <img src="images/oscars2025.webp" alt="Oscars 2025">
                 <div class="overlay"><span>WrapUp Oscars 2025</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/BftfFgYMAqA?si=c9OPfhDc7ILYVATx">
-                <img src="images/ekardio.jpg" alt="eKardio">
+                <img src="images/ekardio.webp" alt="eKardio">
                 <div class="overlay"><span>eKardio - 5 Razones</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/xp2prkRlZgM?si=obI1kXqKxXl0h2gU">
-                <img src="images/saas.jpg" alt="SaaS">
+                <img src="images/saas.webp" alt="SaaS">
                 <div class="overlay"><span>SaaS on the Beach</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/EOW3XjrJY4I?si=j7xPTzUdeFSEg-tE">
-                <img src="images/scala.jpg" alt="Scala Compunctionis">
+                <img src="images/scala.webp" alt="Scala Compunctionis">
                 <div class="overlay"><span>Scala Compunctionis</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/wQa3dgDMPbU?si=qQ4P-xxJyL8v5_jR">
-                <img src="images/consultoria.jpg" alt="Consultoria Casanova">
+                <img src="images/consultoria.webp" alt="Consultoria Casanova">
                 <div class="overlay"><span>Consultoria Casanova</span></div>
             </div>
 
             <div class="portfolio-item" data-locked="true" data-video="">
-                <img src="images/hirut.jpg" alt="Hirut">
+                <img src="images/hirut.webp" alt="Hirut">
                 <div class="overlay"><span>Hirut</span></div>
                 </a>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/WW4Mkrf8Qvw?si=JhsE5Ul_tQqBFb7m">
-                <img src="images/larakali.jpg" alt="Lara i Kali T2">
+                <img src="images/larakali.webp" alt="Lara i Kali T2">
                 <div class="overlay"><span>Lara i Kali T2</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/By7kOI5FhaI?si=j4aAaM03cNcwlblj">
-                <img src="images/canvi.jpg" alt="Coses que no canvien">
+                <img src="images/canvi.webp" alt="Coses que no canvien">
                 <div class="overlay"><span>Coses que no canvien</span></div>
             </div>
 
             <div class="portfolio-item" data-video="https://www.youtube.com/embed/O1HZX_XxvXQ?si=liQGpvGmAZrQQ91m">
-                <img src="images/haneke.jpg" alt="Haneke Fiction">
+                <img src="images/haneke.webp" alt="Haneke Fiction">
                 <div class="overlay"><span>Haneke Fiction</span></div>
             </div>
 
             <div class="portfolio-item" data-locked="true" data-msg="En circulación — disponible bajo petición.">
-                <img src="images/preescriptus.jpg" alt="Preescriptus">
+                <img src="images/preescriptus.webp" alt="Preescriptus">
                 <div class="overlay"><span>Preescriptus</span></div>
             </div>
 
@@ -137,7 +151,7 @@
         </template>
 		
 		<script src="portfolio.js"></script>
-		<script src="/lang.js"></script>
+		<script src="../lang.js"></script>
 
     </body>
 </html>
