--- a/contact.html/contact.html
+++ b/contact.html/contact.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact – Abel Belarre</title>
+    <meta name="description" content="Contacta con Abel Belarre: guionista y filmmaker con base en Barcelona. Descubre proyectos audiovisuales y contacto profesional.">
+    <meta name="keywords" content="Abel Belarre, filmmaker, director, cine, Barcelona, cinematografía, audiovisual, portfolio">
+    <meta name="author" content="Abel Belarre">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="contact.css">
 	<link rel="stylesheet" href="../base.css">
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+
+    <!--favicon-->
+
+    <link rel="icon" type="image/png" href="../icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="../icon/favicon.svg" />
+    <link rel="shortcut icon" href="../icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-touch-icon.png" />
+    <link rel="manifest" href="../icon/site.webmanifest" />
 </head>
 <body>
 
@@ -17,7 +29,6 @@
 				<button data-lang="en" class="lang-btn active">EN</button>
 				<button data-lang="es" class="lang-btn">ES</button>
 				<button data-lang="ca" class="lang-btn">CA</button>
-			
             </div>
             
     <!-- Encabezado -->
@@ -26,28 +37,36 @@
         <p data-i18n="ContactSubtitle">About your next story.</p>
     </header>
 
-    <!-- Contenedor principal -->
+    <!-- Contenedor principal"-->
     <main class="contact-container">
 
         <!-- Formulario -->
-        <form class="contact-form" action="#" method="post">
-        <div class="form-group">
-            <label for="name" data-i18n="FormName">Name</label>
-            <input type="text" id="name" name="name" placeholder="Alan Smithee" required>
-        </div>
+<form
+    id="contact-form"
+    action="https://formspree.io/f/xblznlpw"
+    method="POST"
+    class="contact-form"
+    >
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your name" required>
+    </div>
 
-        <div class="form-group">
-            <label for="email" data-i18n="FromEmail">Email</label>
-            <input type="email" id="email" name="email" placeholder="alan@example.com" required>
-        </div>
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="_replyto" placeholder="you@example.com" required>
+    </div>
 
-        <div class="form-group">
-            <label for="message" data-i18n="FormMessage">Message</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-        </div>
+    <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" placeholder="Write your message..." required></textarea>
+    </div>
 
-        <button type="submit" class="send-btn" data-i18n="FormSend">Send message</button>
-        </form>
+    <button type="submit" class="send-btn">Send message</button>
+
+    <!-- Aquí aparecerán los mensajes -->
+    <p id="form-status" class="form-status"></p>
+</form>
 
         <!-- Datos de contacto -->
         <aside class="contact-info">
@@ -69,7 +88,42 @@
         <a href="../index.html">← Back to home</a>
     </footer>
 
-    <script src="/lang.js"></script>
+    <script src="../lang.js"></script>
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById("contact-form");
+    const status = document.getElementById("form-status");
+
+    async function handleSubmit(event) {
+        event.preventDefault();
+        const data = new FormData(form);
+        status.textContent = "...";
+        status.className = "form-status";
+        try {
+        const response = await fetch(form.action, {
+            method: form.method,
+            body: data,
+            headers: { Accept: "application/json" },
+        });
+        if (response.ok) {
+            status.textContent = " ✔";
+            status.classList.add("success");
+            form.reset();
+        } else {
+            const result = await response.json();
+            status.textContent = result.error || "Error. ↻";
+            status.classList.add("error");
+        }
+        } catch (error) {
+        status.textContent = "ᯤ Error";
+        status.classList.add("error");
+        }
+    }
+
+    form.addEventListener("submit", handleSubmit);
+});
+</script>
+
 
 </body>
 </html>
