--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html>
 	<head>
 		<title>Abel Belarre</title>
+    	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Abel Belarre – Filmmaker & Visual Storyteller</title>
+		<meta name="description" content="Portfolio cinematográfico de Abel Belarre: director y filmmaker con base en Barcelona. Descubre proyectos audiovisuales y contacto profesional.">
+		<meta name="keywords" content="Abel Belarre, filmmaker, director, cine, Barcelona, cinematografía, audiovisual, portfolio">
+		<meta name="author" content="Abel Belarre">
+		<meta name="robots" content="index, follow">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="base.css">
+
+	<!--favicon-->
+
+    <link rel="icon" type="image/png" href="icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="icon/favicon.svg" />
+    <link rel="shortcut icon" href="icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png" />
+    <link rel="manifest" href="icon/site.webmanifest" />
+
+
 	</head>
 	<body>
 			<div class="language-switch">
@@ -13,11 +30,11 @@
 			</div>
 		<section class="hero">
 			<div class="background-slideshow">
-				<img src="images/img1.jpg" class="slide active" alt="Fondo 1">
-				<img src="images/img2.jpg" class="slide" alt="Fondo 2">
-				<img src="images/img3.jpg" class="slide" alt="Fondo 3">
-				<img src="images/img4.jpg" class="slide" alt="Fondo 4">
-				<img src="images/img5.jpg" class="slide" alt="Fondo 5">
+				<img src="images/img1.webp" class="slide active" alt="Fondo 1">
+				<img src="images/img2.webp" class="slide" alt="Fondo 2">
+				<img src="images/img3.webp" class="slide" alt="Fondo 3">
+				<img src="images/img4.webp" class="slide" alt="Fondo 4">
+				<img src="images/img5.webp" class="slide" alt="Fondo 5">
 			</div>
 
 			<div class="overlay-layout">
@@ -27,7 +44,7 @@
 				</div>
 
 				<div class="hero-image">
-				<img src="images/yo.png" alt="My image" />
+				<img src="images/yo.webp" alt="My image" />
 				</div>
 			</div>
 			</section>
