--- a/contact.html/contact.html
+++ b/contact.html/contact.html
@@ -75,9 +75,9 @@
         <p data-i18n="ContactLocation"><strong>Based in:</strong> Barcelona, Spain</p>
         
         <div class="socials">
-            <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/abel-belarre-conill" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/abelbc_audiovisuals" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
         </aside>
 
